# Customer_Intelligence_Protocol

./: .env.example  .gitignore  Makefile  README.md  fastmcp.json  pyproject.toml
docs/: ARCHITECTURE.md  DOMAIN_MCP_BOOTSTRAP.md  DOMAIN_PROFILE_SPEC.md  RELEASE_GOVERNANCE.md  SECURITY_MODEL.md  SYSTEM_PROMPT.md
profiles/: customer_signal_core.v1.yaml  domain_profile.schema.yaml  signal_core.v2.yaml
scripts/: run_server.py  validate_profiles.py
src/cip_core/: __init__.py
src/cip_core/config/: __init__.py  settings.py
src/cip_core/domain_profiles/: __init__.py  constants.py  loader.py  models.py  registry.py  validator.py
src/cip_core/mantic/: __init__.py  runtime.py
src/cip_core/models/: __init__.py  responses.py
src/cip_core/sdk/: __init__.py  translator.py  wrappers.py
src/cip_core/server/: __init__.py  app.py  main.py
tests/: conftest.py
tests/contracts/: test_response_contract.py
tests/integration/: test_mcp_tools.py
tests/unit/: test_domain_profile_validator.py  test_registry.py  test_runtime.py  test_runtime_audit_fields.py  test_sdk_wrappers.py
